--- a/src/Sitecore.Support.103751/Sitecore.Support.103751.csproj
+++ b/src/Sitecore.Support.103751/Sitecore.Support.103751.csproj
@@ -44,7 +44,7 @@
       <HintPath>..\packages\SC.Sitecore.ExperienceEditor.8.1.3\lib\Sitecore.ExperienceEditor.dll</HintPath>
       <Private>False</Private>
     </Reference>
-    <Reference Include="Sitecore.Kernel">
+    <Reference Include="Sitecore.Kernel, Version=8.1.0.0, Culture=neutral, processorArchitecture=MSIL">
       <HintPath>..\packages\SC.Sitecore.Kernel.8.1.3\lib\Sitecore.Kernel.dll</HintPath>
       <Private>False</Private>
     </Reference>
@@ -63,7 +63,7 @@
     <Content Include="sitecore\shell\client\Sitecore\ExperienceEditor\Pipelines\DeleteItem\DeleteItem.Confirm.js" />
   </ItemGroup>
   <ItemGroup>
-    <None Include="packages.config" />
+    <Content Include="packages.config" />
     <None Include="web.config" />
   </ItemGroup>
   <ItemGroup />
